--- a/click.html
+++ b/click.html
@@ -4,7 +4,7 @@
   <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
   <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
   <link rel="stylesheet" href="app.css">
-  <script src="application.js"></script>
+  <script src="app.js"></script>
   <title>Nathaniel Wroblewski</title>
 </head>
 <body>
